adjust page-title margin/padding to ensure consistent spacing on screens up to 1200px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -448,7 +448,7 @@ footer {
 .address-details {
     width: 100%;
     height: 100%;
-    padding: 2rem 0;
+    padding-top: 2rem;
 }
 
 hr {
@@ -569,6 +569,8 @@ textarea {
     cursor: pointer;
 }
 
+/* Form Accepted Page */
+
 .message-heading {
     font-size: 4rem;
     color: #263A29;
@@ -615,6 +617,10 @@ textarea {
 
     /* Find Us Page Media Queries up to 1200px */
 
+    .top-buffer {
+        padding-top: 15rem;
+    }
+
     .map-and-address {
         width: 80%;
         height: 100%;
@@ -629,7 +635,7 @@ textarea {
     /* Book Now Page Media Queries up to 1200px */
 
     #form-section {
-        padding-top: 12rem;
+        padding-top: 6rem;
     }
 
     form,
@@ -681,10 +687,6 @@ textarea {
 
     .menu-nav {
         width: 100%;
-    }
-
-    .top-buffer {
-        padding-top: 15rem;
     }
 
     #starters,
